Contrail-Latest/Applications/nginx-app/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
spec: 
  selector:
    app: nginx
  ports:
    - name: main
      protocol: TCP 
      port: 80 
      targetPort: 80
