Contrail-Latest/Applications/nginx-app/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress-nginx-app
  annotations:
    http.port: "443"
spec: 
  backend:
    serviceName: nginx
    servicePort: 80
